syntax = "proto3";

option csharp_namespace = "BoardService.Contracts";

package board.types;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message BoardColumnDto {
  string id = 1;
  string name = 2;
  int32 order = 3;
  string board_id = 4;
  string created_by_user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}